Implementação do card de desconto com formulário e configurações adicionais

--- a/dashboard.html
+++ b/dashboard.html
@@ -213,7 +213,7 @@
           </li>
         </ul>
         <span class="copyright ml-auto my-auto mr-2">
-          Copyright © 2024 
+          Copyright 
           <a href="#" rel="nofollow">Oakadoo</a>
         </span>
       </footer>
