--- a/dashboard.html
+++ b/dashboard.html
@@ -32,6 +32,8 @@
     <!-- CSS do FullCalendar -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.1/main.min.css" rel="stylesheet">
 
+    <!-- jQuery UI CSS -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 
   </head>
 
@@ -223,8 +225,11 @@
     <!-- ==================== SCRIPTS ==================== -->
 
     <!-- JavaScript do FullCalendar -->
-    <!-- JavaScript do FullCalendar -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
+
+    <!-- jQuery e jQuery UI para funcionalidade de ordenação -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
 
     <!-- Dependências necessárias para funcionalidades interativas -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
