Alterações manuais em arquivos do projeto

--- a/dashboard.html
+++ b/dashboard.html
@@ -140,7 +140,10 @@
               </a>
               <div class="dropdown-menu dropdown-menu-small">
                 <a class="dropdown-item" href="#">
-                  <i class="material-icons">key</i> Trocar Senha
+                  <i class="material-icons">person</i> Meu perfil
+                </a>
+                <a class="dropdown-item" href="#">
+                  <i class="material-icons">key</i> Trocar senha
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-danger" href="#">
