Implementação das seções Horários e Serviços no menu secundário. Criação de novos cards para adicionar serviços, horários, prazos e composições. Correção de bugs na navegação entre cards.

--- a/dashboard.html
+++ b/dashboard.html
@@ -186,6 +186,8 @@
 
         <div id="cardUnidadesPlaceholder"></div>
         <div id="cardComposicoesPlaceholder"></div>
+        <div id="cardServicoPlaceholder"></div>
+        <div id="cardHorariosPlaceholder"></div>
         <div id="cardComplementosLojasPlaceholder"></div>
         <div id="cardFormulariosPlaceholder"></div>
         <div id="cardTermosDeUsoPlaceholder"></div>
@@ -244,5 +246,6 @@
     <script src="assets/js/jquery.sharrre.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="assets/js/beneficios.js"></script>
+    <script src="assets/js/composicao.js"></script>
   </body>
 </html>
